# AERIS-GB

./: LICENSE  README.md  pyproject.toml
configs/: train.yaml
configs/data/: defaults.yaml  era5-aurora.yaml
configs/experiment/: benchmark.yaml  train.yaml  train_6h_hurricane.yaml
configs/optimizer/: adam.yaml  adamw.yaml
configs/trainer/: defaults.yaml
scripts/: animate.py  train_aurora.sh  visualize.sh
scripts/data_processing/: bh52zarr_dist.py  dask-launch.sh  merge.py  merge.sh  wp_create.py  wp_create.sh
src/aeris/: __about__.py  __init__.py  pp_generate.py  train.py
src/aeris/data/: era5.py  samplers.py
src/aeris/models/: parallel_swin.py
src/aeris/parallelism/: parallel_engine.py  schedule.py  sequence_parallel.py  sp_inference_engine.py
src/aeris/utils/: io.py
src/aeris_wp_inference/: era5.py  inference.py  model.py
